<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:gravity="center"
        android:text="@string/front"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/radioGroupID">

        <RadioButton
            android:id="@+id/radioButton1ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton2ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option2Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radioButton3ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3Text"
            android:textSize="32dp"
            android:textStyle="bold"/>
    </RadioGroup>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/mySpinnerID"
        android:layout_height="95dp"/>

    <fragment
        android:id="@+id/myFragmentAreaID"
        android:layout_margin="20dp"
        android:name="com.example.fragmentintentspinner.BDFragment"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/submitButton4ID"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/color2"
        android:onClick="submitfunction"
        android:text="@string/submitText"
        android:textSize="15dp"
        android:textStyle="bold" />
</LinearLayout>